# flake8-rst-docstrings-sphinx

./: .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  formate.toml  pyproject.toml  repo_helper.yml  tox.ini
.github/workflows/: python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
flake8_rst_docstrings_sphinx/: __init__.py  __main__.py
