[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "flake8-rst-docstrings-sphinx"
version = "0.0.0"
description = "Extension to flake8-rst-docstrings to filter out warnings related to Sphinx's built in options."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfcoding/flake8-rst-docstrings-sphinx"
"Issue Tracker" = "https://github.com/domdfcoding/flake8-rst-docstrings-sphinx/issues"
"Source Code" = "https://github.com/domdfcoding/flake8-rst-docstrings-sphinx"

[tool.importcheck]
always = [
    "flake8_rst_docstrings_sphinx",
    "flake8_rst_docstrings_sphinx.__main__",
    "flake8_rst_docstrings_sphinx.domains",
]

[tool.whey]
base-classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Topic :: Utilities",]
python-versions = [ "3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "flake8_rst_docstrings_sphinx"

[tool.mypy]
python_version = "3.9"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dependency-dash."requirements.txt"]
order = 10
